--- a/niffler-e-2-e-tests/build.gradle
+++ b/niffler-e-2-e-tests/build.gradle
@@ -66,7 +66,9 @@ dependencies {
     testImplementation 'com.google.code.findbugs:jsr305:3.0.2'
     // gRPC
     testImplementation "io.grpc:grpc-protobuf:${grpcVersion}"
-    testImplementation "io.grpc:grpc-stub:${grpcVersion}"
+    testImplementation ("io.grpc:grpc-stub:${grpcVersion}") {
+        exclude group: "com.google.guava"
+    }
     testImplementation "io.grpc:grpc-netty:${grpcVersion}"
     testImplementation "com.google.protobuf:protobuf-java:${protobufVersion}"
     testImplementation project(':niffler-grpc-common')
